Reorganize into legacy/BE/FE
Archive the working JavaFX desktop app + server under legacy/ (kept
buildable as-is). Stage the reusable, non-UI backend code (server, DAOs,
DB layer, DB.sql) into BE/ as the starting point for a Spring Boot rewrite.
Add an empty FE/ for the planned React web client that will replace the
JavaFX UI so the app can be deployed and run in a browser.